--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="player1">Player 1</string>
     <string name="player2">Player 2</string>
     <string name="restart_game">restart Game</string>
+    <string name="play">play</string>
 </resources>
