--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,11 +8,19 @@
 
     <!-- game opponent modes -->
     <string name="opponent_ai">AI</string>
-    <string name="opponent_player">Player</string>
+    <string name="opponent_player">FRIEND</string>
 
     <string name="you">You</string>
     <string name="player1">Player 1</string>
     <string name="player2">Player 2</string>
     <string name="restart_game">restart Game</string>
     <string name="play">play</string>
+
+    <!-- game win modes -->
+    <string name="you_win">YOU WINS</string>
+    <string name="you_lose">YOU LOSE</string>
+    <string name="friend_win">FRIEND WINS</string>
+    <string name="draw">DRAW</string>
+    <string name="back">Back to menu?</string>
+    <string name="reset_game">Reset game?</string>
 </resources>
